--- a/Question 2/stylesheet.css
+++ b/Question 2/stylesheet.css
@@ -11,18 +11,20 @@ body {
     width: 80%;
     max-width: 1000px;
     margin: 0 auto;
+ 
 }
 
-.top-nav-bar{
+.top-nav-bar {
     display: flex;
     flex-direction: row;
     padding: 20px;
+    justify-content: space-between;   
 }
 
-#top-bar-options {
+#top-bar-options  {
     display: flex;
-    flex-direction: row;
 }
+
 
 .lower-section {
     display: flex;
@@ -43,11 +45,33 @@ body {
     text-align: center;
 }
 
-.image-block-container {
+
+.image-block-container > div {
     padding: 10px;
-    width: 100%;
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
+    font-size: large;
+    
 }
+
+.image-block-container > div:hover {
+    background-color: #4F4F4F;
+}
+
 
 img {
     width: 100%;
+    padding: 10px;
+
+}
+
+#top-bar-options .nav-item {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#side-nav-bar .nav-item {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
